chore: (mostly) cleanup native image reachability metadata handling